Compilateur.jj
// fichier Compilateur.jj
PARSER_BEGIN(Compilateur)
import java.io.InputStream;
public class Compilateur {
public static void main(String args[]) {
try {
   Compilateur parseur = new Compilateur(System.in);
   parseur.mainNT();
  System.out.println("C'est bien une expression arithmetique");
  } catch (TokenMgrError e) {
  System.out.println("Ceci n'est pas une expression arithmetique");
  } catch (ParseException e) {
  System.out.println("Ceci n'est pas une expression arithmetique");
  }
  }
  }
  PARSER_END(Compilateur)
  SKIP :
  { " " | "\t" | "\n"}
  TOKEN :
  {   < NOMBRE: ["1"-"9"] (["0"-"9"])* >|< EOL: ";" >}
  void mainNT () :
  {}
  { expression() <"EOL">}
  void expression () :
  {}
  { terme() ("+" terme()| "-" terme()
  )*
  }
  void terme () :
  {}
  { facteur() (
  "*" facteur()
  | "/" facteur()
  )* 
  }
  void facteur () :
  {}
  {   "(" expression() ")"
  | "-" facteur()
  | <NOMBRE>
  }
